# inbox-to-action

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  agent.py  config.example.json  conftest.py  glama.json  llm_client.py  main.py  mcp_server.py  pyproject.toml  reasoner.py  report.py  requirements.txt  server.json  setup_cron.sh  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serena/: project.yml
docs/: 01-install.md  02-providers.md  03-gmail-oauth.md  04-multi-account.md  05-integrations.md  06-mcp-and-skill.md  07-config-and-triage.md  08-troubleshooting.md  09-testing-checklist.md  CAPTURE-CHECKLIST.md  README.md
docs/images/: .gitkeep
fixtures/: sample_inbox.json
inbox_to_action/: __init__.py  agent.py  config.py  llm_client.py  main.py  mcp_server.py  models.py  reasoner.py  report.py
inbox_to_action/fixtures/: sample_inbox.json
inbox_to_action/mailboxes/: __init__.py  base.py  gmail.py  outlook.py
inbox_to_action/tools/: __init__.py  calendar_flag.py  classifier.py  gmail.py  notify.py  summarizer.py  tasks.py
skills/inbox-to-action/: SKILL.md
tests/: test_agent.py  test_classifier.py  test_config.py  test_gmail.py  test_llm_client.py  test_mailboxes.py  test_main.py  test_mcp_server.py  test_notify.py  test_outlook.py  test_report.py  test_summarizer.py  test_tasks.py
tools/: calendar_flag.py  classifier.py  gmail.py  summarizer.py  tasks.py
