[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inbox-to-action"
version = "0.2.0"
description = "One-pass agentic inbox triage: classify, summarize, extract tasks, draft replies (never sends), flag calendar."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tarun Gupta" }]
keywords = [
    "email", "triage", "ai", "agent", "mcp", "llm",
    "openrouter", "ollama", "nim", "anthropic", "claude-code",
    "gmail", "outlook", "multi-account", "telegram", "todoist",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Email",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["mcp>=1.0", "anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-mock>=3.0", "respx>=0.21", "ruff>=0.4", "build>=1.0", "twine>=5.0"]

[project.scripts]
inbox-to-action = "inbox_to_action.main:cli"

[project.urls]
Homepage = "https://github.com/tarunlnmiit/inbox-to-action"
Repository = "https://github.com/tarunlnmiit/inbox-to-action"
Issues = "https://github.com/tarunlnmiit/inbox-to-action/issues"

[tool.hatch.build.targets.wheel]
packages = ["inbox_to_action"]
include = ["inbox_to_action/fixtures/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
